--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,14 @@
 <h1>{{title}}</h1>
+<div class="container">
 <form>
-  Numero 1: <input type="text"[(ngModel)]="numero1" name="numero1"><br><br>
-  Numero 2: <input type="text"[(ngModel)]="numero2" name="numero2"><br><br>
+  Numero 1: <input type="number"[(ngModel)]="numero1" name="numero1"><br><br>
+  Numero 2: <input type="number"[(ngModel)]="numero2" name="numero2"><br><br>
 
-  <input type="submit" value="Sumar">
+  <input type="submit" value="Sumar"(click)="sumar()">
+  <input type="submit" value="Restar" (click)="restar()" class="btn btn-primary">
 
 </form>
+</div>
 <br>
 <br>
 
